прописно тег адреса

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header class="top line bg">
 
-        <a href="" lang="en" class="logo">
+        <a href="./." lang="en" class="logo">
             WebStudio
         </a>
 
@@ -94,7 +94,7 @@
                 <a href="./." class="logo">WebStudio</a>
             </li>
             <li>
-                <a href="" class="p">м. Київ, пр-т Лесі Українки, 26</a>
+                <address class="p">м. Київ, пр-т Лесі Українки, 26</address>
             </li>
             <li>
                 <a href="info@devstudio.com" class="p">info@devstudio.com</a>
