--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
             </ul>
         </nav>
 
-        <a href="" class="Menu Nav"> 
-            <p>info@devstudio.com</p>
-        </a>
-            <p class="Menu Nav">+38 096 111 11 11</p>
-
+        <article>
+        <a href="mailtoinfo@devstudio.com" class="Menu Nav"> info@devstudio.com</a>
+            <a href="calto+380961111111" class="Menu Nav">+38 096 111 11 11</a>
+        </article>
         
     </header>
 
@@ -89,10 +88,10 @@
     </main>
 
     <footer class="footer">
+
+        <a href="./." class="logo">WebStudio</a>
+        
         <ul>
-            <li>
-                <a href="./." class="logo">WebStudio</a>
-            </li>
             <li>
                 <address class="p">м. Київ, пр-т Лесі Українки, 26</address>
             </li>
