--- a/index.html
+++ b/index.html
@@ -76,39 +76,27 @@
             </h2>
                 <ul>
                     <li>
-                        <figure>
-                            <img src="./img/ihor.jpg" alt="Ігор Дем'яненко" width="270">
-                            <figcaption class="person-title">Ігор Дем'яненко
-                            <p class="person-descr">Product Designer</p> 
-                            </figcaption>
-                        </figure>
+                         <img src="./img/ihor.jpg" alt="Ігор Дем'яненко" width="270">
+                         <h3 class="person-title">Ігор Дем'яненко</h3>
+                         <p class="person-descr">Product Designer</p> 
                     </li>
 
                     <li>
-                        <figure>    
-                            <img src="./img/olha.jpg" alt="Ольга Рєпіна" width="270">
-                            <figcaption class="person-title">Ольга Рєпіна
-                            <p class="person-descr">Frontend Developer</p>
-                             </figcaption>
-                        </figure>
+                        <img src="./img/olha.jpg" alt="Ольга Рєпіна" width="270">
+                        <h3 class="person-title">Ольга Рєпіна</h3> 
+                        <p class="person-descr">Frontend Developer</p>    
                     </li>
 
                     <li>
-                        <figure>
-                            <img src="./img/nikolai.jpg" alt="Микола Тарасов" width="270">
-                            <figcaption class="person-title">Микола Тарасов 
-                            <p class="person-descr>">Marketing</p>
-                             </figcaption>
-                        </figure>
+                        <img src="./img/nikolai.jpg" alt="Микола Тарасов" width="270">
+                        <h3 class="person-title">Микола Тарасов </h3>
+                        <p class="person-descr>">Marketing</p>
                     </li>
 
                     <li>
-                        <figure>
-                            <img src="./img/mihail.jpg" alt="Михайло Єрмаков" width="270">
-                            <figcaption class="person-title">Михайло Єрмаков  
-                            <p class="person-descr">UI Designer</p> 
-                            </figcaption>
-                        </figure>
+                        <img src="./img/mihail.jpg" alt="Михайло Єрмаков" width="270">
+                        <h3 class="person-title">Михайло Єрмаков </h3> 
+                        <p class="person-descr">UI Designer</p> 
                     </li>
                 </ul>
         </section>    
