--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     
-    <header class="top line bg">
+    <header class="top-line-bg">
 
         <a href="./." lang="en" class="logo">
-            WebStudio
+           <span class="logo-stile">Web</span>Studio
         </a>
 
         <nav>
@@ -112,7 +112,9 @@
 
     <footer class="footer">
 
-        <a href="./." class="logo">WebStudio</a>
+        <a href="./." lang="en" class="logo">
+            <span class="logo-stile">Web</span>Studio
+        </a>
         
         <address>
             <ul>
