--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2 class="practice-title">Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <a href=""><img src="./img/box1.jpg" alt="developers" width="370"></a>
+                    <img src="./img/box1.jpg" alt="developers" width="370">
                 </li>
                 <li>
-                    <a href=""><img src="./img/box2.jpg" alt="adaptiv" width="370"></a>
+                   <img src="./img/box2.jpg" alt="adaptiv" width="370">
                 </li>
                 <li>
-                    <a href=""><img src="./img/box3.jpg" alt="design" width="370"></a>
+                    <img src="./img/box3.jpg" alt="design" width="370">
                 </li>
             </ul>
         </section>
